2006-11-21  Philip van Hoof <pvanhoof@gnome.org>

	* Major changes in TnyMsg and TnyMimePart
	* First support for message/rfc822 messages
	* API documentation enhancements
	* Date fixes in TnyCamelHeader
	
	* This was a major API change in all libraries

2006-11-20  Philip van Hoof <pvanhoof@gnome.org>

	* A new style of handling mime parts
	* First building blocks for supporting message/rfc822
	* Should-be bugfix for an issue in camel-lite's mime-parser on ARM

2006-11-20  Sergio Villar Senin <svillar@igalia.com>

	* Improved the support for subscribing and ubsubscribing folders
	* Improved creating new folders

2006-11-17  Philip van Hoof <pvanhoof@gnome.org>

	* A few s/g_new/g_slice replacements

2006-11-17  Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* Fix for Mozilla bug: http://bugzilla.gnome.org/show_bug.cgi?id=157941
	(comments #46-#51 discuss the problem)
	* Copied the fix from Yelp to libtinymail-mozembed by Philip

2006-11-17  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-folder.h
	* libtinymail/tny-folder.c: added tny_folder_transfer_msgs for
	copying/moving messages between folders

	* libtinymail-camel/tny-camel-folder.h
	* libtinymail-camel/tny-camel-folder.c: added a default Camel
	implementation for tny_folder_transfer_msgs method

	* test/functional/Makefile.am
	* test/functional/msg-transfer.c: added this program to test
	tny_folder_transfer_msgs implementation

2006-11-16  Philip van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: Fixed a rather big memory leak when
	downloading new messages happened
	* Added a basic first Camel implementation for TnySendQueue

2006-11-16  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-folder-store-query.c
	(tny_folder_store_query_item_get_type): replaced TnyFolderStoreQuery
	by TnyFolderStoreQueryItem in the instance size field 

2006-11-15  Philip van Hoof <pvanhoof@gnome.org>

	* libtinymailui-mozembed: fixes for the Gecko support
