@@ -23,6 +23,37 @@ Shared include file with forward typedefs
 </para>
 
 
+<!-- ##### SIGNAL TnyAccountStore::account-changed ##### -->
+<para>
+
+</para>
+
+@tnyaccountstore: the object which received the signal.
+@arg1: 
+
+<!-- ##### SIGNAL TnyAccountStore::account-inserted ##### -->
+<para>
+
+</para>
+
+@tnyaccountstore: the object which received the signal.
+@arg1: 
+
+<!-- ##### SIGNAL TnyAccountStore::account-removed ##### -->
+<para>
+
+</para>
+
+@tnyaccountstore: the object which received the signal.
+@arg1: 
+
+<!-- ##### SIGNAL TnyAccountStore::accounts-reloaded ##### -->
+<para>
+
+</para>
+
+@tnyaccountstore: the object which received the signal.
+
 <!-- ##### STRUCT TnyAccountStoreIface ##### -->
 <para>
 
@@ -229,6 +260,14 @@ Shared include file with forward typedefs
 </para>
 
 
+<!-- ##### SIGNAL TnyDevice::connection-changed ##### -->
+<para>
+
+</para>
+
+@tnydevice: the object which received the signal.
+@arg1: 
+
 <!-- ##### STRUCT TnyDeviceIface ##### -->
 <para>
 
@@ -247,12 +286,21 @@ Shared include file with forward typedefs
 </para>
 
 
+<!-- ##### SIGNAL TnyStoreAccount::subscription-changed ##### -->
+<para>
+
+</para>
+
+@tnystoreaccount: the object which received the signal.
+@arg1: 
+
 <!-- ##### STRUCT TnyStoreAccountIface ##### -->
 <para>
 
 </para>
 
 @parent: 
+@subscription_changed: 
 @subscribe_func: 
 @unsubscribe_func: 
 
