@@ -35,6 +35,14 @@ G_BEGIN_DECLS
 #define TNY_IS_STORE_ACCOUNT(obj)          (G_TYPE_CHECK_INSTANCE_TYPE ((obj), TNY_TYPE_STORE_ACCOUNT))
 #define TNY_STORE_ACCOUNT_GET_IFACE(inst)  (G_TYPE_INSTANCE_GET_INTERFACE ((inst), TNY_TYPE_STORE_ACCOUNT, TnyStoreAccountIface))
 
+enum _TnyStoreAccountSignal
+{
+	TNY_STORE_ACCOUNT_SUBSCRIPTION_CHANGED,
+	TNY_STORE_ACCOUNT_LAST_SIGNAL
+};
+
+extern guint tny_store_account_signals [TNY_STORE_ACCOUNT_LAST_SIGNAL];
+
 #ifndef TNY_SHARED_H
 typedef struct _TnyStoreAccount TnyStoreAccount;
 typedef struct _TnyStoreAccountIface TnyStoreAccountIface;
@@ -44,6 +52,10 @@ struct _TnyStoreAccountIface
 {
 	GTypeInterface parent;
 
+	/* Signals */
+	void (*subscription_changed) (TnyStoreAccount *self, TnyFolder *folder);
+
+	/* Methods */
 	void (*subscribe_func) (TnyStoreAccount *self, TnyFolder *folder);
 	void (*unsubscribe_func) (TnyStoreAccount *self, TnyFolder *folder);
 };
