@@ -1,3 +1,12 @@
+2006-11-21  Sergio Villar Senin <svillar@igalia.com>
+	* Fixed a bug when subscribing new folders
+	* Added the signal "subscription_changed" to TnyStoreAccount
+	* Added a query to TnyGtkAccountTreeModel
+	* tinymail/tny-demoui-summary-view.c: now asks only for the
+	subscribed folders
+
+	* This was a major API change in libtinymailui-gtk
+
 2006-11-21  Philip van Hoof <pvanhoof@gnome.org>
 
 	* Major changes in TnyMsg and TnyMimePart
